feat: refactor weather component

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no,user-scalable=no,maximum-scale=1"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="China Portal Lite 一站式导航-网站-工具-小组件" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
