--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>China Portal Lite 一站式导航-网站-工具-小组件</title>
+    <title>有点东西 - China Portal Lite - 一站式导航 - 网站 - 工具 - 小组件</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
