--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no,user-scalable=no,maximum-scale=1"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="China Portal Lite 一站式导航-网站-工具-小组件" />
+    <meta name="description" content="Portal Lite 一站式导航-网站-工具-小组件" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>有点东西 - China Portal Lite - 一站式导航 - 网站 - 工具 - 小组件</title>
+    <title>有点东西 - Portal Lite - 一站式导航 - 网站 - 工具 - 小组件</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
