--- a/public/crx/popup/index.html
+++ b/public/crx/popup/index.html
@@ -7,27 +7,28 @@
     <title>Portal Popup</title>
     <style>
       body {
-        min-width: 200px;
-        min-height: 100px;
-      }
-      .btn {
-        height: 100px;
+        min-width: 300px;
+        min-height: 200px;
         display: flex;
         justify-content: center;
         align-items: center;
       }
-      .btn button {
-        cursor: pointer;
-        outline: none;
-        border-radius: 5px;
-        padding: 10px 14px;
-        background-color: #fff;
+      .box {
+        margin: 10px;
+        padding: 15px 20px;
+        border: 1px dashed #aaa;
+      }
+      .box.allowed .tip {
+        display: none;
       }
     </style>
   </head>
   <body>
-    <div class="btn">
-      <button id="add_nav_btn">添加当前到导航小组件</button>
+    <div class="box">
+      <button class="btn">Initializing</button>
+      <div class="tip">
+        After granting permissions to Vemos, you can open this popup again and start the app.
+      </div>
     </div>
     <script src="./script.js"></script>
   </body>
