--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta property="og:url" content="https://nicegoodthings.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Portal Lite" />
+    <meta property="og:image" content="https://nicegoodthings.com/apple-touch-icon.png" />
+    <meta property="og:description" content="Your personal portal on Web" />
+    <meta property="og:site_name" content="Portal Lite" />
+    <meta property="og:locale" content="en_US" />
+    <!-- <meta property="article:author" content="" /> -->
+    <meta name="twitter:card" content="Your personal portal on Web" />
+    <!-- <meta name="twitter:site" content="@site_account" /> -->
+    <meta name="twitter:creator" content="@privoce1" />
+    <meta name="twitter:url" content="https://nicegoodthings.com" />
+    <meta name="twitter:title" content="Privoce Portal" />
+    <meta name="twitter:description" content="Your personal portal on Web" />
+    <meta name="twitter:image" content="https://nicegoodthings.com/apple-touch-icon.png" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -31,7 +46,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>有点东西 - Portal Lite - 一站式导航 - 网站 - 工具 - 小组件</title>
+    <title>Portal Lite - Privoce - 一站式导航 - 网站 - 工具 - 小组件</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
