test: just for debug

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Portal Lite - Privoce - 一站式导航 - 网站 - 工具 - 小组件</title>
+    <script src="./crx/vera/assets/authing.min.js"></script>
+    <script src="./tmp.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
