feat: make vera invite id invisible
vera 邀请链接中的ID改为隐式传参

--- a/public/crx/option.html
+++ b/public/crx/option.html
@@ -7,6 +7,10 @@
     <title>Portal Option</title>
   </head>
   <body>
-    Portal Option Page
+    <h1>Portal Option Page</h1>
+    <section>
+      <ul class="locals"></ul>
+    </section>
   </body>
+  <script src="./assets/option.js"></script>
 </html>
